Fixed get covariance matrix function

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "id": "41d0f970",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "import yfinance as yf\n",
     "import pandas as pd\n",
     "import os\n",
+    "import numpy as np\n",
     "\n",
     "tickers = (\"AAPL\", \"ABBV\", \"ABT\", \"ACN\", \"ADBE\", \"AIG\", \"AMD\", \"AMGN\", \"AMT\", \"AMZN\",\n",
     "    \"AVGO\", \"AXP\", \"BA\", \"BAC\", \"BK\", \"BKNG\", \"BLK\", \"BMY\", \"BRK-B\",\n",
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "id": "8603e7bb",
    "metadata": {},
    "outputs": [
@@ -38,22 +39,22 @@
     }
    ],
    "source": [
-    "# Import 10 years of historic data to store in data/raw using yfinance to fetch OHLCV (Open, High, Low, Close, Volume) data\n",
-    "\n",
     "path = os.path.join(\"..\", \"data\", \"raw\")\n",
-    "clean_path = os.path.join(\"..\", \"data\", \"processed\")\n",
+    "clean_path = os.path.join(\"..\", \"data\", \"processed\") \n",
     "\n",
-    "import_data = yf.download(tickers, start = \"2015-01-01\", end = \"2024-12-31\", auto_adjust = False)\n",
-    "import_data.to_csv(os.path.join(path, \"import_data.csv\"))\n",
-    "\n",
-    "for ticker in tickers:\n",
-    "    dataframe = import_data.xs(ticker, level = 1, axis = 1)\n",
+    "# Ensure the raw and processdata directory exists\n",
+    "os.makedirs(path, exist_ok=True)\n",
+    "os.makedirs(clean_path, exist_ok=True)\n",
+    "import_data = yf.download(tickers, start = \"2015-01-01\", end = \"2024-12-31\", auto_adjust = False) \n",
+    "import_data.to_csv(os.path.join(path, \"import_data.csv\")) \n",
+    "for ticker in tickers: \n",
+    "    dataframe = import_data.xs(ticker, level = 1, axis = 1) \n",
     "    dataframe.to_csv(os.path.join(path, f\"{ticker}.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "id": "e647897c",
    "metadata": {},
    "outputs": [],
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "id": "0ca9d7b4",
    "metadata": {},
    "outputs": [],
@@ -84,8 +85,6 @@
     "    \n",
     "    new_data = pd.read_csv(clean_file_path, low_memory = False)\n",
     "    new_data['Adj Close'] = pd.to_numeric(new_data['Adj Close'], errors = 'coerce')\n",
-    "    new_data = new_data.drop(columns=['Open', 'High', 'Low', 'Close', 'Volume'])\n",
-    "\n",
     "    new_data.to_csv(clean_file_path, index = False) \n",
     "    final_path = os.path.join(\"..\", \"data\", \"processed\", file)\n",
     "    new_data.to_csv(final_path, index = False)  "
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 23,
    "id": "14c26277",
    "metadata": {},
    "outputs": [],
@@ -107,6 +106,11 @@
     "    data = pd.read_csv(file_path, low_memory = False)\n",
     "    \n",
     "    data[\"Return\"] = data['Adj Close'].pct_change()\n",
+    "    data[\"Log Return\"] = np.log1p(data['Return'])\n",
+    "    data[\"Rolling Mean\"] = data['Return'].rolling(window=5).mean()\n",
+    "    data[\"Rolling Std\"] = data['Return'].rolling(window=5).std()\n",
+    "    data[\"Volatility\"] = data['Rolling Std'] * (252**0.5)\n",
+    "    data.dropna(inplace = True)\n",
     "    data.to_csv(file_path, index = False)"
    ]
   }
